# fake-realty-api

./: .gitignore  Makefile  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
fake_realty_api/: asgi.py  settings.py  urls.py  wsgi.py
faker/: models.py
models/: __init__.py  models.py
providers/: __init__.py  providers.py
real_estate/: admin.py  constants.py  models.py  serializers.py  views.py
real_estate/fake_factories/: __init__.py  models.py  providers.py
real_estate/migrations/: 0001_CreateSuperUser.py  0002_initial.py  0003_CreatePropertyData.py
