[tool.poetry]
name = "fake-realty-api"
version = "0.1.0"
description = ""
authors = ["Kobe Li <likobe23@gmail.com>"]
readme = "README.md"
packages = [{include = "fake_realty_api"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
